--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,4 @@
-v0.4.0. Re-packaged as gem using echoe. More threads.
+v0.4.0. Re-packaged as gem using echoe. Eventmachine. Client authentication.
 
 v0.3.9. Cleanup and removed dependencies.
 
